<resources>
    <string name="app_name">DrunkBlock</string>
    <string name="this_app_package">konrad_wpam.drunkblock</string>
    <string name="password_window_act">drunkblocker.PASSWORD_WINDOW_AC</string>
    <string name="dialer_pkg">com.android.dialer</string>
    <string name="clock_pkg">com.android.deskclock</string>string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <string name="app_thumbnail">app_thumbnail</string>
    <string name="locker_thumbnail">locker_thumbnail</string>
    <string name="must_implement">must implement</string>
    <string name="locked">locked</string>
    <string name="unlocked"></string>

    <string name="choose_apps_to_block">Choose apps to be blocked before going further.</string>

    <string name="fill_in_password">Fill in password</string>
    <string name="friendNo_not_correct">Friends number incorrect</string>
    <string name="hostNo_not_correct">Hosts number incorrect</string>
    <string name="signs_order">Passwords signs order: </string>

    <string name="to_lock_settings">To lock settings</string>
    <string name="start_blocking">Block!</string>
    <string name="choose_apps">Choose apps</string>
    <string name="stop_locking_apps">Stop Locking Apps</string>
    <string name="cant_stop_locking">You have chosen not to stop locking apps</string>

    <string name="blocks_duration">Blocks duration</string>
    <string name="set_password">Set password</string>
    <string name="password_on_off">Password off/on</string>
    <string name="friend_number">Friends number you can call even with block set</string>
    <string name="host_number">Host number you can call even with block set</string>
    <string name="block_set">Block set till: </string>
    <string name="db_running">Drunk Block locks your apps</string>
    <string name="click_to_launch">Click to launch Drunk Block app</string>

    <string name="call_friend">Click to call friend</string>
    <string name="call_host">Click to call party host</string>

    <string name="blocking_apps_stopped">Blocking apps was stopped!</string>
    <string name="when_password_window">when</string>

    <string name="notf_channel_name">Drunk_Block_Notf</string>
    <string name="notf_chan_desc">Notifications of Drunk Block App</string>
    <string name="friend">friend</string>
    <string name="host">host</string>

    <string name="instruction">Instruction</string>
    <string name="first_instruction">"1. Click green 'Choose Apps' button."</string>
    <string name="second_instruction">2. Select which apps or services that you would like to block.</string>
    <string name="third_instruction">"3. Click green 'To Lock Settings' button."</string>
    <string name="fourth_instruction">4. Set how long you would like the apps to be blocked for.</string>
    <string name="fifth_instruction">5. Ask yourself:
        Do I want the ability to unlock these apps while timer is still running?\n
        If YES activate password and set it. </string>
    <string name="sixth_instruction">6. If you want fill in number to a friend or/and party host
        that you would like to call during block.</string>
    <string name="seventh_instruction">"7. Click green 'Set Block' button!"</string>
    <string name="emergency_instruction">You can call emergency no. 112 if phone blocked!</string>

    <string name="date_format">HH:mm dd/MM/yyyy</string>
    <string name="alarm_phone">112</string>

    <string-array name="hours_spinner_items">
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="hours_spinner_data">
        <item>600000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>18000000</item>
        <item>36000000</item>
        <item>72000000</item>
        <item>144000000</item>
    </string-array>

    <string name="usage_stats_please">We need your permission to check live usage of your apps for our blocks to work.
        Please go to Settings and let us do our job.</string>
    <string name="other_please">Your permission to use phone and kill processes in background is needed to set block on phone calls if you would like to.
    Please give it to us and let us do our job.</string>
    <string name="we_need_permissions"> App would not work without permissions.
        Click to add them.</string>
</resources>
