<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_on_list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_thumbnail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_thumbnail"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/locker_thumbnail"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/locker_thumbnail"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/app_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/locked_unlocked_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/unlocked"
        app:layout_constraintBottom_toBottomOf="@+id/app_thumbnail"
        app:layout_constraintEnd_toStartOf="@+id/locker_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="app"
        app:layout_constraintBottom_toBottomOf="@+id/app_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/app_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>